--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,27 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.traffic-light {
+    border-radius: 10px;
+    background: black;
+    display: inline-block;
+    padding: 10px;
+    margin: auto;
+}
+.light {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.red {
+    background: red
+}
+.yellow {
+    background: yellow
+}
+.green {
+    background: green
+}
+.glow{
+    box-shadow: 0px 0px 10px 10px white;
+}
